adjusted coloring; going to add components for buttons soon; fixing tos links tom & going to fix overflow y problem; more pages soon.

--- a/frontend/src/pages/Home/home.module.scss
+++ b/frontend/src/pages/Home/home.module.scss
@@ -161,7 +161,7 @@
     &:hover,
     &:focus {
         background-color: #ffffff;
-        color: #402918;
+        color: #3C2F2F;
     }
 
     @media only screen and (max-width: 1050px) {
@@ -205,7 +205,7 @@
     height: 6vh;
     line-height: 6vh;
     font-size: 3.6vh;
-    background-color: #402918;
+    background-color: #3C2F2F;
     color: #fff;
 
     @media only screen and (max-width: 1050px) {
@@ -218,7 +218,7 @@
     height: 8vh;
     line-height: 8vh;
     font-size: 4.4vh;
-    background-color: #402918;
+    background-color: #3C2F2F;
     color: #fff;
 }
 
