--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -6,8 +6,8 @@
 
 :root {
     --background-opacity: 0.075;
-    --background-color: #2d1c10;
-    --primary-color: #402918;
+    --background-color: #2b1f1f;
+    --primary-color: #422c23;
     --accent-color: #ffffff;
 }
 
